<resources>
    <string name="app_name">Palco</string>
    <string name="info_text">Cliccando sul pulsante “Continua” confermi di aver letto ed accettato i “termini e condizioni” del software.\nL’App PALCO è ideata e sviluppata da Antonino Fiumara.\n UX/UI: Stefano M. Scarlatti.</string>
    <string name="login">Accedi</string>
    <string name="register">registrazione</string>
    <string name="email">e-mail</string>
    <string name="password">password</string>
    <string name="register_hint">Non sei registrato? Effettua la</string>
    <string name="server_error">Ops... c\'è stato un problema</string>
    <string name="enter_username">Inserisci l\'e-mail</string>
    <string name="enter_password">Inserisci la password</string>
    <string name="repeat_password">Conferma la password</string>
    <string name="email_error">Inserire un indirizzo e-mail valido</string>
    <string name="password_error">La password deve contenere almeno un numero una maiuscola e un carattere speciale</string>
    <string name="password_mismatch_error">Le password non coincidono</string>
    <string name="registration_failed">Registrazione fallita</string>
    <string name="registration_user_already_exist">Utente già registrato</string>
    <string name="registration_email_not_valid">Inserire un indirizzo e-mail esistente</string>
    <string name="concerti_nazionali">Italia</string>
    <string name="concerti_locali">Città</string>
    <string name="concerti_internazionali">Europa</string>
    <string name="concerti_filter">Filtri</string>
    <string name="filter_month">Mese</string>
    <string name="filter_city">Città</string>
    <string name="filter_artist">Artista</string>
    <string name="no_data">Non ci sono concerti nel giorno selezionato</string>
    <string name="listen_button_string">Ascolta</string>
    <string name="share_string">Condividi</string>
    <string name="back_string">Indietro</string>
    <string name="maps_string">Maps</string>
    <string name="close_button_string">Chiudi</string>
    <string name="city_select">Elenco città italiane. Seleziona una città dall\'elenco.</string>
    <string name="city_selected">Città selezionata : %1$s. Fai tap quì per cambiare città</string>
    <string name="filter_month_select">Elenco mesi. Seleziona un mese dell\'elenco</string>
    <string name="filter_month_selected">Mese selezionato : %1$s. Fai tap quì per cambiare mese</string>
    <string name="filter_city_selected">Città selezionata : %1$s. Fai tap quì per cambiare città</string>
    <string name="filter_artist_selected">Artista selezionato : %1$s. Fai tap quì per cambiare artista</string>
    <string name="filter_city_select">Elenco città. Seleziona una città dall\'elenco</string>
    <string name="filter_artist_select">Elenco artisti. Seleziona un artista dall\'elenco</string>
    <string name="share_concert_string">C\'è un concerto \n %1$s a %2$s \n %3$s \n clicca sul link per maggiori dettagli %4$s</string>
    <string name="share_url">https://palco.mywire.org</string>
    <string name="locali">locali</string>
    <string name="nazionali">nazionali</string>
    <string name="google_signin">Accedi con Google</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="notification_id">1010101</string>
    <string name="channel_name">Palco Channel</string>
    <string name="channel_description">Notification Palco</string>
    <string name="no_location">Non è stato possibile localizzzare i concerti a te vicini</string>
    <string name="gps_disabled">Attiva il GPS per localizzare i concerti a te vicini</string>
</resources>