<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        style="@style/NumeriniCalendario"
        android:id="@+id/email"
        android:layout_width="@dimen/dp_322"
        android:layout_height="@dimen/dp_40"
        android:hint="@string/enter_username"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_background_grey"
        android:paddingTop="@dimen/dp_12"
        android:textColorHint="@color/colorWhite"
        android:layout_marginTop="@dimen/dp_112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        style="@style/NumeriniCalendario"
        android:id="@+id/password"
        android:layout_width="@dimen/dp_322"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_36"
        android:hint="@string/enter_password"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_background_grey"
        android:paddingTop="@dimen/dp_12"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <EditText
        style="@style/NumeriniCalendario"
        android:id="@+id/password_repeat"
        android:layout_width="@dimen/dp_322"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_36"
        android:hint="@string/repeat_password"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_background_grey"
        android:paddingTop="@dimen/dp_12"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView
        android:id="@+id/register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_book"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_12"
        tools:text="@string/register_hint"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_64"
        android:layout_marginBottom="@dimen/dp_36"
        android:background="@drawable/button_background_white"
        android:text="@string/register"
        android:fontFamily="@font/gotham_bold"
        android:drawableEnd="@drawable/ic_triangle"
        android:paddingRight="@dimen/dp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>